# minishell

./: .gitignore  CMakeLists.txt  Makefile  README.md  ____test.c  ____test.cc  ___test.c  a.out  execute.c  fileee  ft_echo.c  ft_minishell.c  ft_minishell.h  ft_vector.h  minishell  minishell.c  minishell.h  redirs.c  simple-test.h  test.c  test2.c  tests.c  testtt.c  valgrind-out.txt  vector_fill_out_utils.c  xxxxx.c
_junk/: fileeee  testtt.c
ast/: node.c  node.h
builtins/: ft_cd.c  ft_env.c  ft_exit.c  ft_export.c  ft_pwd.c  ft_unset.c
commands/: ft_buildin.h  ft_builtin.h  ft_cd.c  ft_echo.c  ft_env.c  ft_exit.c  ft_export.c  ft_pwd.c  ft_unset.c
errors/: error.c  error.h
global_utils/: __X_malloc.c  ft_atoi.c  ft_atol.c  ft_bzero.c  ft_heredoc.c  ft_heredoc_handlers.c  ft_index_of.c  ft_is.c  ft_itoa.c  ft_malloc.c  ft_memset.c  ft_split.c  ft_strcmp.c  ft_strdup.c  ft_strjoin.c  ft_strlen.c  ft_substr.c  ft_variables.c  ft_variables_2.c  ft_variables_3.c  ft_variables_4.c  ft_vector.c  ft_vector_1.c  ft_vector_2.c  global_utils.c  global_utils.h  global_utils2.c  gnl.c
include/: error.h  ft_builtin.h  ft_globals.h  ft_types.h  ft_utility.h  ft_variables.h  ft_vector.h  global_utils.h  lexer.h  minishell.h  node.h  parser.h
junk/: print_many.c  sig_test.c  testtt.c
lexer/: env_vars_helper_funcs.c  envirement_vars_utils.c  lexer.c  lexer.h  lexer_helper_functions.c  lexer_helper_functions2.c  lexer_parsing_helper_funcs.c  lexer_tokens_helper_funcs.c  lexer_tokens_helper_funcs2.c  quotes_parsing_helper_funcs.c
libft/: Makefile  ft_atoi.c  ft_bzero.c  ft_calloc.c  ft_isalnum.c  ft_isalpha.c  ft_isascii.c  ft_isdigit.c  ft_isprint.c  ft_itoa.c  ft_memccpy.c  ft_memchr.c  ft_memcmp.c  ft_memcpy.c  ft_memmove.c  ft_memset.c  ft_putchar_fd.c  ft_putendl_fd.c  ft_putnbr_fd.c  ft_putstr_fd.c  ft_split.c  ft_strchr.c  ft_strdup.c  ft_strjoin.c  ft_strlcat.c  ft_strlcpy.c  ft_strlen.c  ft_strmapi.c  ft_strncmp.c  ft_strnstr.c  ft_strrchr.c  ft_strtrim.c  ft_substr.c  ft_tolower.c  ft_toupper.c  libft.h
main/: cmds.c  execute.c  ft_cmds.c  ft_envp.c  ft_execve.c  ft_free.c  ft_heredoc.c  ft_heredoc_handlers.c  ft_paths.c  ft_pipes.c  ft_redirs.c  ft_run.c  ft_signals.c  ft_variables.c  ft_variables_3.c  ft_vector.c  ft_vector_1.c  ft_vector_2.c  minishell.c  redirs.c  redirs_parsing.c
minishell.dSYM/Contents/Resources/DWARF/: minishell
parser/: parse.c  parse_redirs.c  parser.h  parser_helper_functions.c  parser_utils.c  vector_fill_out_utils.c
tokenizer/: token.c
utility/: ft_env.c  ft_env.h  ft_execve.c  ft_heredoc.c  ft_types.h  ft_utility.h  ft_variables.c  ft_variables.h  ft_vector.c  ft_vector.h  test_env.c  test_vector.c  vector_functions_implemet.c  vector_functions_implemt2.c
